Fix newsletter form width on mobile.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -277,6 +277,7 @@ input[type="text"],
 input[type="email"] {
     font-family: Text;
     text-transform: none;
+    width: 80%;
 }
 
 figure {
